--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: monospace;
+    font-family: 'Lexend Mega', sans-serif;
     font-size: 10px;
 }
 
@@ -32,13 +32,24 @@ html {
     color: #Edddd0;
   }
  
-  .header a:hover {
+.header a:hover {
     color: #DB504a;
+  }
+
+a:visited, a:link, a:active {
+    text-decoration: none;
   }
 
 .side {
     grid-area: s;
     background-color: #6e8783;
+}
+
+.sidelist {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 h1 {
@@ -51,6 +62,8 @@ h1 {
 .main {
     grid-area: m;
     background-color: #E5E5DC;
+    color: #334259;
+    padding: 10px;
 }
 
 footer {
@@ -60,11 +73,8 @@ footer {
 
 li {
     color: #334259;
-    list-style-type: none;
     margin-right: 3rem;
 }
-
-
 
 .top {
     display: flex;
@@ -72,6 +82,11 @@ li {
 }
 
 p em strong {
-    font-family: 'Lexend Mega', sans-serif;
     color: #334259;
+}
+
+img {
+    width: 300px;
+    height: 300px;
+    padding-top: 20px;
 }
